--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <link rel="icon" type="image/svg+xml" href="/burger.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>McDonald's</title>
+    <style>
+      *{
+          margin: 0;
+          padding: 0;
+          box-sizing: border-box;
+          cursor: pointer;
+      }
+      </style>
   </head>
   <body>
     <div id="root"></div>
